Sat Apr 23 23:39:56 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * include/LEESA/AP.cpp:
        * include/LEESA/Carrier_Optimized.h:
        * include/LEESA/Carrier_Simple.h:
        * include/LEESA/Concepts.h:
        * include/LEESA/LEESA.cpp:
        * include/LEESA/LeftShift.cpp:
        * include/LEESA/Operators.cpp:
        * include/LEESA/RightShift.cpp:
        * include/LEESA/SP.cpp:
        * include/LEESA/SP_Accumulation.cpp:
        * include/LEESA/SingleStage.h:

        * tests/library-xsd/library-10.0.vcxproj:
		
		Improved error reporting.

Mon Apr 18 07:16:47 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * include/LEESA/AP.cpp:
        * include/LEESA/SP.cpp:

        * tests/library-xsd/library-10.0.vcxproj:

                  Removed unused parameters.

Fri Apr 15 07:35:58 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * include/LEESA/LEESA.cpp:

        * tests/library-xsd/driver.cxx:
        * tests/library-xsd/library-10.0.vcxproj:
        * tests/library-xsd/lxml-perf.py:

                Added examples in the driver and fixed bugs in LEESA.cpp

Sun Feb 27 21:34:21 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * include/LEESA/Expression_Traits.h:
        * include/LEESA/Operators.cpp:
        * include/LEESA/SP.cpp:
          function_traits are removed because C++0x lambdas and boost::bind
          function objects don't have argument_type and result_type typedefs.

        * tests/library-xsd/Makefile:
        * tests/library-xsd/driver.cxx:
        * tests/library-xsd/library.xml:
          Improved library-xsd's TEST5. It now tetst free functions, custom
          functors, boost::bind functros, and C++0x lambdas.

Sun Feb 27 00:27:42 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * include/LEESA/Carrier_Optimized.cpp:
        * include/LEESA/Carrier_Simple.h:
        * include/LEESA/Expression_Traits.h:
        * include/LEESA/LEESA.cpp:

        * tests/library-xsd/Makefile:
